openmediavault-docker-gui (3.0.3) UNRELEASED; urgency=medium

  * Minor tweaks to the repo tab 
  * Add logos to the linuxserver.io docker images
  * Add php5-imagick dependancy
  * Make it possible to edit port forwarding rows
  * Make it possible to edit environment variable rows
  * Make it possible to edit bind mount rows

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 06 Jan 2016 08:55:59 +0100

openmediavault-docker-gui (3.0.2) stable; urgency=medium

  * Add r/o mode to bind mounts
  * Stability fixes to Docker service restart
  * Add linuxserver.io images to the repo tab
  * Usability improvements on the repo tab

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 04 Jan 2016 23:34:25 +0100

openmediavault-docker-gui (3.0.1) stable; urgency=medium

  * Fix postrm script to use systemd
  * Add fixes to ensure proper upgrade from 0.2.x plugin branch

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 04 Jan 2016 12:40:21 +0100

openmediavault-docker-gui (3.0.0) stable; urgency=low

  * Make plugin OMV 3.x compatible
  * Add support for network port types (tcp/udp)
  * Rename "Docker repo" to "Docker images repo"
  * Make time sync with host default when running container
  * Make restart always policy default when running container

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 03 Jan 2016 21:56:59 +0100

openmediavault-docker-gui (0.2.21) stable; urgency=low

  * Add support for container logs 

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 30 Dec 2015 21:42:22 +0100

openmediavault-docker-gui (0.2.20) testing; urgency=low

  * Fix typo in init script

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 14 Nov 2015 20:30:48 +0100

openmediavault-docker-gui (0.2.19) testing; urgency=low

  * Improved solution for remounting Docker runtime directory
    noexec at reboot
